--- a/editor.html
+++ b/editor.html
@@ -22,38 +22,49 @@
         rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
 
+    <!-- Quill.js Rich Text Editor -->
+    <link href="https://cdn.jsdelivr.net/npm/quill@2.0.2/dist/quill.snow.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/quill@2.0.2/dist/quill.js"></script>
+
+    <!-- Highlight.js for Code Syntax Highlighting -->
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/atom-one-dark.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
+
     <script type="module">
         import { injectLayout } from './js/layout.js';
         injectLayout();
     </script>
     <style>
-        .editor-btn.active {
-            background-color: #3b82f6;
-            color: white;
-            border-color: #1d3a8a;
+        /* Quill Editor Customization */
+        .ql-container {
+            font-size: 16px;
+            min-height: 400px;
         }
 
-        .prose {
-            max-width: none;
+        .ql-editor {
+            min-height: 400px;
         }
 
-        .prose img {
-            max-width: 100%;
+        .ql-snow .ql-picker {
+            font-size: 14px;
+        }
+
+        /* Code block styling */
+        .ql-editor pre.ql-syntax {
+            background-color: #282c34;
+            color: #abb2bf;
             border-radius: 0.5rem;
-        }
-
-        .prose pre {
-            background: #1f2937;
-            color: white;
             padding: 1rem;
-            border-radius: 0.5rem;
+            overflow-x: auto;
         }
 
-        .prose blockquote {
-            border-left: 4px solid #3b82f6;
-            padding-left: 1rem;
-            font-style: italic;
-            color: #4b5563;
+        /* Image styling in editor */
+        .ql-editor img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 0.5rem;
+            margin: 1rem 0;
         }
     </style>
 </head>
@@ -89,36 +100,10 @@
                     </div>
                 </div>
 
-                <!-- Toolbar -->
-                <div class="flex flex-wrap gap-2 mb-4 border p-2 rounded-lg bg-gray-50 sticky top-20 z-40 shadow-sm"
-                    id="editor-toolbar">
-                    <button class="p-2 hover:bg-gray-200 rounded" data-cmd="bold" title="Bold"><i data-feather="bold"
-                            class="w-4 h-4"></i></button>
-                    <button class="p-2 hover:bg-gray-200 rounded" data-cmd="italic" title="Italic"><i
-                            data-feather="italic" class="w-4 h-4"></i></button>
-                    <button class="p-2 hover:bg-gray-200 rounded" data-cmd="underline" title="Underline"><i
-                            data-feather="underline" class="w-4 h-4"></i></button>
-                    <div class="w-px bg-gray-300 h-6 my-auto"></div>
-                    <button class="p-2 hover:bg-gray-200 rounded font-bold" data-cmd="formatBlock"
-                        data-val="h2">H2</button>
-                    <button class="p-2 hover:bg-gray-200 rounded font-bold" data-cmd="formatBlock"
-                        data-val="h3">H3</button>
-                    <div class="w-px bg-gray-300 h-6 my-auto"></div>
-                    <button class="p-2 hover:bg-gray-200 rounded" data-cmd="insertUnorderedList" title="Bullet List"><i
-                            data-feather="list" class="w-4 h-4"></i></button>
-                    <button class="p-2 hover:bg-gray-200 rounded" data-cmd="insertOrderedList" title="Numbered List"><i
-                            data-feather="layers" class="w-4 h-4"></i></button>
-                    <div class="w-px bg-gray-300 h-6 my-auto"></div>
-                    <button class="p-2 hover:bg-gray-200 rounded" id="insert-img-btn" title="Insert Image"><i
-                            data-feather="image" class="w-4 h-4"></i></button>
-                    <button class="p-2 hover:bg-gray-200 rounded" id="create-link-btn" title="Create Link"><i
-                            data-feather="link" class="w-4 h-4"></i></button>
-                </div>
 
-                <!-- Editor -->
-                <div id="editor-content" contenteditable="true"
-                    class="prose prose-lg max-w-none focus:outline-none min-h-[400px] p-4 border border-gray-200 rounded-lg">
-                    <p><br></p>
+                <!-- Quill Editor Container -->
+                <div id="quill-editor" class="bg-white border border-gray-200 rounded-lg">
+                    <!-- Quill will inject the toolbar and editor here -->
                 </div>
 
                 <!-- Actions -->
