Add theme toggle and refine dark/light UI styling

--- a/blog.html
+++ b/blog.html
@@ -55,11 +55,11 @@
                     tutorials, and thoughts on AI, Data Science, and Tech</p>
             </div>
         </section>
-        <div class="min-h-screen bg-gray-50 pt-12 pb-12">
+        <div class="min-h-screen bg-slate-950/40 pt-12 pb-12">
             <div class="max-w-screen-2xl mx-auto px-4">
                 <!-- Blog Grid -->
                 <div id="blog-grid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-                    <p class="text-center col-span-3 text-gray-500">Loading posts...</p>
+                    <p class="text-center col-span-3 text-slate-400">Loading posts...</p>
                 </div>
 
                 <!-- Back to Home -->
