--- a/cv.html
+++ b/cv.html
@@ -94,9 +94,9 @@
 
     <main class="flex-1">
         <!-- CV Content -->
-        <section class="py-12 px-4 bg-gray-50 mt-12" id="cv-content-section">
+        <section class="py-12 px-4 bg-slate-950/40 mt-12" id="cv-content-section">
             <div class="max-w-4xl mx-auto">
-                <div id="cv-loading" class="text-center py-10 text-gray-500">Loading CV...</div>
+                <div id="cv-loading" class="text-center py-10 text-slate-400">Loading CV...</div>
 
                 <!-- Profile Section -->
                 <div id="cv-profile"></div>
