--- a/post.html
+++ b/post.html
@@ -37,18 +37,18 @@
     <style>
         /* Basic prose styles */
         .prose {
-            color: #374151;
+            color: #cbd5e1;
             max-width: 65ch;
             margin: 0 auto;
         }
 
         .prose a {
-            color: #3b82f6;
+            color: #6ee7b7;
             text-decoration: underline;
         }
 
         .prose strong {
-            color: #111827;
+            color: #f8fafc;
             font-weight: 600;
         }
 
@@ -66,7 +66,7 @@
         .prose h1,
         .prose h2,
         .prose h3 {
-            color: #111827;
+            color: #f1f5f9;
             font-weight: 700;
             margin-top: 1.5em;
             margin-bottom: 0.5em;
@@ -96,7 +96,7 @@
         }
 
         .prose code {
-            background: #f3f4f6;
+            background: #1e293b;
             padding: 0.2em 0.4em;
             border-radius: 0.3rem;
             font-size: 0.9em;
@@ -135,10 +135,10 @@
         }
 
         .prose blockquote {
-            border-left: 4px solid #e5e7eb;
+            border-left: 4px solid #334155;
             padding-left: 1em;
             font-style: italic;
-            color: #6b7280;
+            color: #94a3b8;
         }
     </style>
 </head>
@@ -147,9 +147,9 @@
     <!-- Navbar injected by layout.js -->
 
     <main class="flex-1">
-        <article class="pt-32 pb-16">
+        <article class="pt-32 pb-16 bg-transparent">
             <div class="max-w-3xl mx-auto px-4" id="post-container">
-                <div class="text-center py-20 text-gray-500">Loading post...</div>
+                <div class="text-center py-20 text-slate-400">Loading post...</div>
             </div>
         </article>
     </main>
