--- a/projects.html
+++ b/projects.html
@@ -70,7 +70,7 @@
             <div class="max-w-7xl mx-auto">
                 <div id="projects-grid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                     <!-- Projects Populated by JS -->
-                    <p class="text-center col-span-3 text-gray-500">Loading projects...</p>
+                    <p class="text-center col-span-3 text-slate-400">Loading projects...</p>
                 </div>
 
                 <div class="mt-12 text-center">
