Add homepage courses grid and improve light-mode readability

--- a/admin.html
+++ b/admin.html
@@ -19,6 +19,19 @@
         .font-sans {
             font-family: 'Montserrat', sans-serif;
         }
+
+        body.theme-light #tab-content .text-gray-900 {
+            color: #111827 !important;
+        }
+
+        body.theme-light #tab-content .text-gray-500,
+        body.theme-light #tab-content .text-gray-600 {
+            color: #4b5563 !important;
+        }
+
+        body.theme-light #tab-content .bg-white {
+            background-color: #ffffff !important;
+        }
     </style>
 </head>
 
