--- a/courses.html
+++ b/courses.html
@@ -35,6 +35,26 @@
             -webkit-text-fill-color: transparent;
             background-clip: text;
         }
+
+        body.theme-light #courses-strip .text-slate-100,
+        body.theme-light #chapters-tree .text-slate-100,
+        body.theme-light #notes-header {
+            color: #111827 !important;
+        }
+
+        body.theme-light #courses-strip .text-slate-300,
+        body.theme-light #courses-strip .text-slate-400,
+        body.theme-light #chapters-tree .text-slate-400,
+        body.theme-light #notes-subheader,
+        body.theme-light #notes-grid .text-slate-400 {
+            color: #4b5563 !important;
+        }
+
+        body.theme-light #courses-strip .bg-slate-900\/80,
+        body.theme-light #chapters-tree .bg-slate-950\/30,
+        body.theme-light #notes-grid .bg-slate-900\/80 {
+            background-color: #ffffff !important;
+        }
     </style>
 </head>
 
