--- a/index.html
+++ b/index.html
@@ -317,6 +317,27 @@
             </div>
         </section>
 
+        <!-- Courses Section -->
+        <section class="py-8 px-4 pt-16 bg-gray-50 overflow-hidden">
+            <div class="max-w-7xl mx-auto">
+                <div class="mb-12 text-center" data-aos="fade-up">
+                    <h1 class="text-4xl md:text-3xl font-bold mb-4">Featured <span class="text-gradient">Courses</span>
+                    </h1>
+                    <p class="text-gray-600 text-lg max-w-2xl mx-auto">Explore structured courses with chapters and
+                        blog-style notes. Login is required to access full course content.</p>
+                </div>
+                <div id="courses-grid-home" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+                    <!-- Courses -->
+                </div>
+                <div class="text-center mt-12" data-aos="fade-up">
+                    <a href="/courses.html"
+                        class="inline-flex items-center text-green-600 font-medium hover:text-green-800">
+                        View All Courses <i data-feather="arrow-right" class="ml-2"></i>
+                    </a>
+                </div>
+            </div>
+        </section>
+
         <!-- Contact Section -->
         <section id="contact" class="py-10 md:py-20 px-4 bg-gray-50 overflow-hidden">
             <!-- Static Contact HTML from template -->
