Improve courses light-mode contrast and preserve next redirect after auth

--- a/courses.html
+++ b/courses.html
@@ -55,6 +55,41 @@
         body.theme-light #notes-grid .bg-slate-900\/80 {
             background-color: #ffffff !important;
         }
+
+        body.theme-light #chapters-tree .text-emerald-200,
+        body.theme-light #notes-grid .text-emerald-300,
+        body.theme-light #notes-grid .hover\:text-emerald-200:hover,
+        body.theme-light #courses-strip .text-emerald-200 {
+            color: #065f46 !important;
+        }
+
+        body.theme-light #chapters-tree .bg-emerald-900\/10,
+        body.theme-light #notes-grid .bg-emerald-900\/40,
+        body.theme-light #courses-strip .bg-emerald-900\/40 {
+            background-color: #d1fae5 !important;
+        }
+
+        body.theme-light #chapters-tree .border-emerald-400,
+        body.theme-light #notes-grid .border-emerald-400 {
+            border-color: #047857 !important;
+        }
+
+        body.theme-light main>section:first-of-type {
+            background: linear-gradient(135deg, #e8f7ee 0%, #f4fbf7 55%, #ffffff 100%) !important;
+            border-color: #d1fae5 !important;
+        }
+
+        body.theme-light main>section:first-of-type .text-white {
+            color: #111827 !important;
+        }
+
+        body.theme-light main>section:first-of-type .text-slate-300 {
+            color: #374151 !important;
+        }
+
+        body.theme-light main>section:first-of-type .text-emerald-300 {
+            color: #047857 !important;
+        }
     </style>
 </head>
 
