Improve admin dashboard title visibility in dark mode

--- a/admin.html
+++ b/admin.html
@@ -20,6 +20,10 @@
             font-family: 'Montserrat', sans-serif;
         }
 
+        body.theme-dark h1 {
+            color: #f3f4f6 !important;
+        }
+
         body.theme-light #tab-content .text-gray-900 {
             color: #111827 !important;
         }
