Improve admin table header and cell readability in dark mode

--- a/admin.html
+++ b/admin.html
@@ -24,6 +24,19 @@
             color: #f3f4f6 !important;
         }
 
+        body.theme-dark #tab-content thead th {
+            color: #e5e7eb !important;
+        }
+
+        body.theme-dark #tab-content thead.bg-gray-50,
+        body.theme-dark #tab-content .bg-gray-50 {
+            background-color: #1f2937 !important;
+        }
+
+        body.theme-dark #tab-content tbody td {
+            color: #e5e7eb !important;
+        }
+
         body.theme-light #tab-content .text-gray-900 {
             color: #111827 !important;
         }
